[tool.poetry]
name = "deep-dive-tracker"
version = "1.0.0"
description = ""
authors = ["mrkirby153 <mr.austinwhyte@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "deep_dive_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
schedule = "1.2.0"
toml = "^0.10.2"

[tool.poetry.scripts]
deep-dive-tracker = 'deep_dive_tracker:main'


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
